# django_task5

./: pyproject.toml  requirements.txt
config/: .env  settings.py
